﻿2007-10-07  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/maps/new_18-1.tmx: Fixed some collision layer problems.

2007-10-01  Philipp Sehmisch  <tmw@crushnet.org>

	* src/player.cpp, data/graphics/sprites/hairstyle*:
	Added support for different hairstyles for male and female characters
	(current female hairstyles are copies of the male ones until the 
	real female ones are finished)

2007-09-30  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/tiles/desert_x3.png: Removed the purple line from the
	ruin tile.

2007-09-27  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/tiles/desert2.png, data/graphics/tiles/desert_x3.png,
	data/graphics/tiles/desert_x5.png: Added new desert tiles by Len.

2007-09-20  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* data/equipment.xml, data/graphics/items/armor-head-funkyhat.png,
	data/graphics/items/armor-head-mushroomhat.png,
	data/graphics/items/armor-head-shroomhat.png,
	data/graphics/items/armor-head-tophat.png,
	data/graphics/sprites/item019.png, data/graphics/sprites/item019.xml,
	data/graphics/sprites/item020.png, data/graphics/sprites/item020.xml,
	data/graphics/sprites/item021.png, data/graphics/sprites/item021.xml,
	data/graphics/sprites/item022.png, data/graphics/sprites/item022.xml,
	data/items.xml, data/maps/new_21-1.tmx: Added 4 new items and a new ice
	cave map.

2007-09-12  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* data/items.xml, data/equipment.xml: Added temporary weapon IDs below
	256 to use as view-ID in eAthena's item DB.
	* src/gui/shoplistbox.cpp, src/gui/buy.h, src/gui/buy.cpp: Allowed
	selection of items that cannot be afforded, so that their descriptions
	are still accessible. Also made sure the player's money value of
	ShopItemList gets updated.

2007-09-11  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* src/gui/chat.cpp, tmw.cbp: Fixed admin commands.

2007-09-08  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/particles/aniblaze.png, 